recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:5: error: ';' expected but ')' found.
    tree(steps-1,length*shrink,2*angle,shrink);tree(steps-1,length*shrink,-angle,shrink))
                                                                                        ^