recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  baisseCrayon()
  if (steps!=0){
    droite(angle);currrent(step);;avance(length)
    tree(steps-1,length*shrink,2*angle,shrink);tree(steps-1,length*shrink,-angle,shrink))
  }
}